// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should display children 1`] = `
<div
  className="HeaderColor_default"
>
  content
</div>
`;

exports[`Header should extend className 1`] = `
<div
  className="HeaderColor_default noPaddingBottom"
>
  content
</div>
`;

exports[`Header should set position fixed 1`] = `
<div
  className="HeaderColor_default HeaderFixed"
>
  content
</div>
`;

exports[`Header should set theme default 1`] = `
<div
  className="HeaderColor_default"
>
  content
</div>
`;

exports[`Header should set theme primary 1`] = `
<div
  className="HeaderColor_primary"
>
  content
</div>
`;
